# GABM

./: .buildinfo  .buildinfo.bak  .bumpversion.cfg  .gitignore  API_KEYS.html  API_KEYS.md  Apertus.html  Apertus.md  CHANGE_LOG.html  CHANGE_LOG.md  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  CONTACT.html  CONTRIBUTORS  CONTRIBUTORS.html  DEVELOPMENT_HISTORY.html  DEVELOPMENT_HISTORY.md  DEV_GUIDE.html  DEV_GUIDE.md  DEV_QUICKSTART.html  DEV_QUICKSTART.md  DEV_SESSION_LOGGING.html  HUGGING_FACE.html  HUGGING_FACE.md  JOSS_SUBMISSION.html  JOSS_SUBMISSION.md  LICENSE  LICENSE.html  Makefile  README-pypi.md  README.html  README.md  ROADMAP.html  ROADMAP.md  SECURITY.html  SETUP_GUIDE.html  SETUP_GUIDE.md  SETUP_GUIDE_DEV.html  SETUP_GUIDE_DEV.md  (+31 more)
.doctrees/: API_KEYS.doctree  Apertus.doctree  CHANGE_LOG.doctree  CODE_OF_CONDUCT.doctree  CONTACT.doctree  CONTRIBUTORS.doctree  DEVELOPMENT_HISTORY.doctree  DEV_GUIDE.doctree  DEV_QUICKSTART.doctree  DEV_SESSION_LOGGING.doctree  HUGGING_FACE.doctree  JOSS_SUBMISSION.doctree  LICENSE.doctree  README.doctree  ROADMAP.doctree  SECURITY.doctree  SETUP_GUIDE.doctree  SETUP_GUIDE_DEV.doctree  SETUP_GUIDE_USER.doctree  USER_GUIDE.doctree  development_history.doctree  environment.pickle  index.doctree  requirements-dev.doctree  requirements-local-llm.doctree  requirements.doctree
.github/: CONTACT.md  SECURITY.md  draft-pdf.yml
_autosummary/: gabm.abm.agent.html  gabm.abm.agents.agent.html  gabm.abm.agents.group.html  gabm.abm.agents.html  gabm.abm.attribute.html  gabm.abm.attributes.education.html  gabm.abm.attributes.employment.html  gabm.abm.attributes.ethnicity.html  gabm.abm.attributes.family.html  gabm.abm.attributes.gender.html  gabm.abm.attributes.health.html  gabm.abm.attributes.html  gabm.abm.attributes.income.html  gabm.abm.attributes.opinion.html  gabm.abm.attributes.politics.html  gabm.abm.attributes.region.html  gabm.abm.attributes.wealth.html  gabm.abm.democracy.candidate.html  gabm.abm.democracy.election.html  gabm.abm.democracy.elections.html  gabm.abm.democracy.elections.uk.general_election.html  gabm.abm.democracy.elections.uk.html  gabm.abm.democracy.elections.uk.referendum.html  gabm.abm.democracy.html  gabm.abm.democracy.political_party.html  gabm.abm.environment.html  gabm.abm.group.html  gabm.abm.html  gabm.abm.opinion.html  gabm.abm.survey.html  gabm.core.environment.html  gabm.core.html  gabm.core.id.html  gabm.html  gabm.io.html  gabm.io.llm.apertus.html  gabm.io.llm.deepseek.html  gabm.io.llm.genai.html  gabm.io.llm.html  gabm.io.llm.llm_service.html  (+7 more)
_sources/: API_KEYS.md.txt  CHANGE_LOG.md.txt  CODE_OF_CONDUCT.md.txt  CONTACT.md.txt  CONTRIBUTORS.md.txt  DEVELOPMENT_HISTORY.md.txt  DEV_GUIDE.md.txt  DEV_QUICKSTART.md.txt  DEV_SESSION_LOGGING.md.txt  JOSS_SUBMISSION.md.txt  README.md.txt  ROADMAP.md.txt  SECURITY.md.txt  SETUP_GUIDE.md.txt  SETUP_GUIDE_DEV.md.txt  SETUP_GUIDE_USER.md.txt  USER_GUIDE.md.txt  anthropic.rst.txt  index.md.txt  index.rst.txt  openai.rst.txt  requirements-dev.md.txt  requirements-local-llm.md.txt  requirements.md.txt  utils.rst.txt
api/: modules.html
docs/: CONTRIBUTORS.md  DEVELOPMENT_HISTORY.md  DEV_GUIDE.md  DO_NOT_EDIT.txt  LICENSE.md  README.md  SETUP_GUIDE.md  USER_GUIDE.md  conf.py  development_history.md  index.md  index.rst  requirements-dev.md  requirements-dev.txt  requirements-local-llm.md  requirements.md
io/: read_data.html
scripts/: __init__.py  build-test.py  clean.py  clean_docs_assets.py  clean_project.py  clear-caches.py  clear_caches.py  compress_dev_logs.py  docs-clean.py  docs.py  docs_assets.py  generate_pypi_readme.py  gh-pages-deploy.py  gh_pages_deploy.py  release.py  setup-llms.py  (+3 more)
(+237 files in other folders)
