[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gabm"
version = "0.1.1"
description = "Generative Agent-Based Model (GABM) framework."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "GABM Contributors", email = "agdturner@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "openai == 1.13.3",
    "google-generativeai == 0.4.1",
    "httpx == 0.28.1",
    "deepseek == 1.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["gabm"]

