[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gabm"
version = "0.2.13"
description = "Generative Agent-Based Model (GABM) framework."
readme = "README-pypi.md"
requires-python = ">=3.12"
license = {text = "BSD License"}
authors = [
    {name = "GABM Contributors", email = "agdturner@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
dependencies = ['requests==2.32.5', 'openai==2.21.0', 'google-genai==1.65.0', 'deepseek==1.0.0', 'matplotlib==3.10.8']

[project.optional-dependencies]
llm-local = ['torch==2.10.0', 'transformers==5.1.0']

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["gabm"]


