[metadata]
name = gabm
version = 0.1.4
description = Generative Agent-Based Model (GABM) framework.
long_description = file: README.md
long_description_content_type = text/markdown
author = GABM Contributors
author_email = agdturner@gmail.com
license = BSD-3-Clause
url = https://github.com/compolis/gabm

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    openai == 1.13.3
    google-generativeai == 0.4.1
    httpx == 0.28.1
    deepseek == 1.0.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
