[metadata]
name = gabm
version = 0.2.4
description = Generative Agent-Based Model (GABM) framework.
long_description = file: README-pypi.md
long_description_content_type = text/markdown
author = GABM Contributors
author_email = agdturner@gmail.com
license = BSD 3-Clause
url = https://github.com/compolis/GABM

[classifiers]
License = : OSI Approved :: BSD License

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.12
install_requires = 
	    openai==2.21.0
	    google-genai==0.8.0
	    httpx==0.28.1
	    deepseek==1.0.0
	    matplotlib==3.10.8

[options.packages.find]
where = src

[options.extras_require]
llm-local = 
	    torch==2.10.0
	    transformers==5.1.0
test = 
	pytest

